--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
 header {
     background-color: #ffffff;
     border-style: solid;
-    border-width: 0px 0px 1px;
+    border-width: 0px 0px 2px;
     border-color: #cccccc;
     margin: -8px -8px 30px;
     height: 76px;
@@ -23,11 +23,13 @@ main {
     border-color: #dddddd;
 }
 
-article {
-}
-
 footer {
     background-color: #666666;
+    border-style: solid;
+    border-width: 7px 0px 0px;
+    border-color: #4aaaa5;
+    margin: 100px -8px 0px;
+    height: 60px;
 }
 
 h1 {
@@ -37,8 +39,43 @@ h1 {
     display: inline-block;
 }
 
-hr {
+h5 {
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-weight: normal;
+}
 
+hr {
+    border-style: solid;
+    border-width: 2px;
+    border-color: #dddddd;
+}
+
+input[type="text"] {
+    border-style: solid;
+    border-width: 1px;
+    border-color: #cccccc;
+    height: 12px;
+    width: 898px;
+    padding: 10px;
+    color: #777777;
+}
+
+input[type="submit"] {
+    background-color: #4aaaa5;
+    color: #ffffff;
+    border: none;
+    padding: 10px 25px;
+    font-size: inherit;
+}
+
+textarea {
+    border-style: solid;
+    border-width: 1px;
+    border-color: #cccccc;
+    width: 898px;
+    padding: 10px;
+    color: #777777;
+    font-family: inherit;
 }
 
 nav { 
@@ -80,7 +117,19 @@ a:hover {
 }
 
 .wrapper2 {
-    margin: 30px 20px;
+    margin: 10px 20px 30px;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-top: 25px;
+}
+
+.container2 {
+    position: relative;
 }
 
 .nav-head {
@@ -90,4 +139,34 @@ a:hover {
     padding: 20px;
     position: relative;
     top: -21px;
+}
+
+.about-article {
+    line-height: 2;
+    padding-top: 10px;
+}
+
+.about-figure {
+    margin-left: 0px;
+    margin-right: 20px;
+    float: left;
+}
+
+.form {
+    margin: 10px 20px 30px;
+    line-height: 2;
+}
+
+.foot {
+    font-size: 10px;
+    text-align: center;
+    color: #dddddd;
+    padding-top: 15px;
+}
+
+.text-block {
+    position: absolute;
+    bottom: 12px;
+    background-color: #4aaaa5;
+    color: white;
 }
